# industrial-datagen

./: .actrc  .gitignore  CLAUDE.md  Makefile  README.md  REVIEW_FINDINGS.md  cliff.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
backend/: pyproject.toml
backend/app/: config.py  context.py  main.py
backend/app/api/: datasets.py  health.py  processes.py  rtsp.py  simulations.py  statistics.py  streaming.py
backend/app/models/: dataset.py  rtsp.py  simulation.py
backend/app/rtsp/: manager.py
backend/app/simulators/: __init__.py  base.py  chemical.py  pharma.py  pulp.py  refinery.py  rotating.py
backend/app/storage/: base.py  memory.py
backend/tests/: conftest.py
backend/tests/features/: anomaly_injection.feature  dataset_generation.feature  simulation.feature
backend/tests/features/steps/: test_anomaly_steps.py  test_dataset_steps.py  test_simulation_steps.py
backend/tests/integration/: test_api_datasets.py  test_api_health.py  test_api_processes.py  test_api_rtsp.py  test_api_simulations.py
backend/tests/unit/: test_chemical.py  test_context.py  test_dataset_temporal.py  test_pharma.py  test_pulp.py  test_refinery.py  test_rotating.py  test_rtsp_manager.py
deploy/: Containerfile  docker-compose.yml
deploy/bootc/: .gitignore  Containerfile
deploy/openshift/: configmap.yaml  (+3 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  SIMULATORS.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
(+79 files in other folders)
